// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Backdrop /> > should pass className 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: var(--pv-color-black);
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  -webkit-tap-highlight-color: transparent;
}

<div
    aria-hidden="true"
    class="my-class-name emotion-0"
    style="opacity: 0.5; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  />
</DocumentFragment>
`;

exports[`<Backdrop /> > should render with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: var(--pv-color-black);
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  -webkit-tap-highlight-color: transparent;
}

<div
    aria-hidden="true"
    class="emotion-0"
    style="opacity: 0.5; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  />
</DocumentFragment>
`;

exports[`<Backdrop /> > variants > variant "heavy" 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: var(--pv-color-black);
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  -webkit-tap-highlight-color: transparent;
}

<div
    aria-hidden="true"
    class="emotion-0"
    style="opacity: 0.9; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  />
</DocumentFragment>
`;

exports[`<Backdrop /> > variants > variant "light" 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: var(--pv-color-black);
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  -webkit-tap-highlight-color: transparent;
}

<div
    aria-hidden="true"
    class="emotion-0"
    style="opacity: 0.1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  />
</DocumentFragment>
`;

exports[`<Backdrop /> > variants > variant "medium" 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: var(--pv-color-black);
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  -webkit-tap-highlight-color: transparent;
}

<div
    aria-hidden="true"
    class="emotion-0"
    style="opacity: 0.5; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  />
</DocumentFragment>
`;
